--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title><% 
+  <title>Untitled</title><%
   if(props.bootstrap) { %>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css"><%
   }
@@ -16,7 +16,11 @@
 <body>
 	<%
   if(props.jquery) { %>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><%
+	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script><%
+  }
+  if(props.handlebars) { %>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.runtime.min.js"></script>
+  <script src="templates/compiled.js"></script><%
   }
   if(props.js) { %>
 	<script src="main.js"></script><%
