Fix handlebars incompatibility by using a fork of gulp-handlebars that compiles templates using handlebars 2.0.0-alpha.4.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script><%
   }
   if(props.handlebars) { %>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.runtime.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.4/handlebars.runtime.min.js"></script>
   <script src="templates/compiled.js"></script><%
   }
   if(props.js) { %>
