--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,9 @@
     if(props.underscore) { %>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script><%
     }
+    if(props.bootstrap) { %>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.js"></script><%
+    }
     if(props.js) { %>
     <script src="main.js"></script><%
     }
